fix horizontal scrolling, probably only affects trackpad

--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@ body {
   background-size: cover;
   background-position-y: -10vh;
   overflow-y: hidden;
+  overflow-x: hidden;
   /* height: 100vh; */
 }
 body::-webkit-scrollbar {
